--- a/sketch19/package.json
+++ b/sketch19/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "three00",
+  "name": "sketch19",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -22,6 +22,7 @@
   "dependencies": {
     "@dimforge/rapier3d": "^0.19.1",
     "@tailwindcss/vite": "^4.1.14",
+    "@tweakpane/plugin-essentials": "^0.2.1",
     "destyle.css": "^4.0.1",
     "emittery": "^1.2.0",
     "gsap": "3.12",
